[project]
name = "davia"
version = "0.1.0"
description = "A CLI tool for the no-code platform to test and deploy AI-native interfaces"
readme = "README.md"
authors = [
    { name = "Ruben Illouz", email = "ruben@davia.ai" },
    { name = "Afnan Khan", email = "afnan.khan@davia.ai" },
    { name = "Theo Bazille", email = "theo.bazille@davia.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.40",
    "langgraph>=0.3.2",
    "langgraph-cli[inmem]>=0.1.74",
    "typer>=0.15.1",
]

[project.scripts]
davia = "davia.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
]
langchain = [
    "anthropic[vertex]>=0.48.0",
    "langchain-google-vertexai>=2.0.14",
    "langchain-openai>=0.3.7",
]

[tool.uv]
default-groups = ["dev", "langchain"]
